fixed video cropping

--- a/src/pages/Gallery/_gallery2.scss
+++ b/src/pages/Gallery/_gallery2.scss
@@ -25,13 +25,15 @@
     height: 100%;
     width: 100%;
     position: relative;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
     -webkit-column-count: 3;
     -webkit-column-gap: 0px!important;
     -moz-column-count: 3;
     -moz-column-gap: 0px!important;
     column-count: 3;
     column-gap: 0px!important;
+    max-height: 2500px;
+    overflow-y: scroll;
 
     .grid_item {
       position: relative;
@@ -74,9 +76,12 @@
         }
       }
       .gallery_video {
+        // height
+        overflow: hidden;
         video {
           height: 100%!important;
           width: 100%!important;
+          transform: scale(1.3);
         }
       }
       img {
