--- a/src/pages/Gallery/gallery.scss
+++ b/src/pages/Gallery/gallery.scss
@@ -24,13 +24,17 @@
     height: 100%;
     width: 100%;
     position: relative;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
     -webkit-column-count: 3;
     -webkit-column-gap: 0px!important;
     -moz-column-count: 3;
     -moz-column-gap: 0px!important;
     column-count: 3;
     column-gap: 0px!important;
+    -moz-column-fill: auto;
+    column-fill: auto;
+    max-height: 2500px;
+    overflow-y: scroll;
 
     .grid_item {
       position: relative;
@@ -73,9 +77,11 @@
       }
       .gallery_video {
         // height
+        overflow: hidden;
         video {
           height: 100%!important;
           width: 100%!important;
+          transform: scale(1.3);
         }
       }
       img {
